[package]
name = "rocket-auth-token"
version = "0.1.0"
authors = ["Samuelonoja <samiodev@icloud.com>"]
edition = "2018"
description = "Auth token and credentials helper for your rocket web api. This is a basic token generator plugin for Rust Rocket Web."
documentation = "https://docs.rs/rocket-auth-token"
repository="https://github.com/Samuelonoja/rocket-auth-token/"
homepage="https://github.com/Samuelonoja/rocket-auth-token/"
license = "MIT OR Apache-2.0"
keywords = ["rocket", "rocket web", "api", "authentication token", "authentication"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
serde = {version="1", features =["derive"]}